python_scriptdir = ${pkgdatadir}/lib
python_script_DATA = \
	gui.py \
	project_assistant.py\
	repo_editor.py\
	package_group.py

gladedir = ${pkgdatadir}
glade_DATA = \
	image-creator.glade

pngdir = ${pkgdatadir}
png_DATA = \
	add.png \
	delete.png \
	gnome-terminal.png

extradir = ${pkgdatadir}
extra_DATA = \
	newFeature

pixmapsdir = ${pkgdatadir}
pixmaps_DATA = \
	pixmaps/image-creator-32x32.xcf \
	pixmaps/image-creator-32x32.xpm \
	pixmaps/mic-assistant.xcf \
	pixmaps/mic-assistant.xpm
